// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interactive pathway basic interactive-pathway component renders 1`] = `
<bolt-interactive-pathway>
  <div class="c-bolt-interactive-pathway"
       is="shadow-root"
  >
  </div>
</bolt-interactive-pathway>
`;

exports[`interactive pathway basic interactive-pathway component with the global \`no-shadow\` prop added 1`] = `
<bolt-interactive-pathway no-shadow>
  <div class="c-bolt-interactive-pathway"
       is="shadow-root"
  >
  </div>
</bolt-interactive-pathway>
`;

exports[`interactive pathway interactive-pathway with outer CSS class via Drupal Attributes 1`] = `
<bolt-interactive-pathway class="u-bolt-margin-top-medium">
  <div class="c-bolt-interactive-pathway"
       is="shadow-root"
  >
  </div>
</bolt-interactive-pathway>
`;
